crates/trousseau-cli/tests/snapshots/help__help_env.snap
---
source: crates/trousseau-cli/tests/help.rs
expression: stdout
---
Print the store's entries as environment variable assignments

Usage: trousseau env [OPTIONS]

Options:
      --format <FORMAT>
          The output format. `--json` is an alias for `--format json`

          Possible values:
          - shell:  `export NAME='value'` lines
          - dotenv: `NAME="value"` lines
          - json:   A single `{"NAME": "value"}` JSON object
          
          [default: shell]

      --store <PATH>
          The store to operate on. Overrides every other resolution rule (3.2)
          
          [env: TROUSSEAU_STORE=]

      --env-prefix <P>
          A prefix prepended to every environment variable name. Defaults to `[run].env_prefix` from
          the configuration file (3.4) when absent

      --global
          Use the personal store instead of the nearest project store (3.2)

      --identity <PATH>
          An identity file to try when unlocking a recipients store. Repeatable (3.3.2)

      --only <KEYPREFIX>
          Only include entries under this path prefix. Repeatable

      --passphrase-file <PATH>
          A file holding the passphrase for a passphrase store (3.3.3)

      --json
          Emit machine-readable JSON instead of human-readable text (3.5.1)

      --quiet
          Suppress informational stderr lines. Errors still print (3.5.1)

      --no-input
          Never prompt. Anything that would have prompted fails instead (3.5.1)

  -h, --help
          Print help (see a summary with '-h')
