crates/trousseau-cli/tests/snapshots/help__help_export.snap
---
source: crates/trousseau-cli/tests/help.rs
expression: stdout
---
Write the store's entries out in plaintext.

The output is NOT encrypted. Prefer `run` or `env` to hand secrets to a program, and delete exported
files when you are done.

Usage: trousseau export [OPTIONS]

Options:
      --format <FORMAT>
          The output format

          Possible values:
          - json:   The full JSON payload document
          - dotenv: One `NAME="value"` line per UTF-8 entry
          - toml:   The `edit` TOML document format
          
          [default: json]

      --out <PATH>
          Write to this file instead of stdout

      --force
          Overwrite `--out` if it already exists

  -h, --help
          Print help (see a summary with '-h')

Global options:
      --store <PATH>
          Use this store file. Wins over `--global` and over store discovery
          
          [env: TROUSSEAU_STORE=]

      --global
          Use your personal store instead of the nearest project store (the `.trousseau` file in
          this directory or a parent)

      --identity <PATH>
          An identity (private key) file to try when unlocking. Repeatable. Also tried:
          `TROUSSEAU_IDENTITY_FILE`, the config file's `identity.files`, the default identity file,
          `~/.ssh/id_ed25519` and `~/.ssh/id_rsa`

      --passphrase-file <PATH>
          Read the store's passphrase from this file instead of prompting. One trailing newline is
          stripped

      --json
          Print one JSON document on stdout instead of text. Errors become a JSON object on stderr

      --quiet
          Suppress informational messages on stderr. Errors still print

      --no-input
          Never prompt. A command that would prompt fails instead: exit 4 for a secret, exit 2 for a
          confirmation

Formats:
  json     the full document, with metadata (default); round-trips through
           'import'
  dotenv   NAME="value" lines; binary entries are skipped with a warning
  toml     the same document 'trousseau edit' opens

Examples:
  A full backup, as JSON, to a new file (mode 0600):
    trousseau export --out backup.json

  A .env file:
    trousseau export --format dotenv --out .env

  Copy every entry into another store:
    trousseau export | trousseau import --store ./other.trousseau

Notes:
  --out refuses to overwrite an existing file (exit 8) unless --force.
