crates/trousseau-cli/tests/snapshots/help__help_get.snap
---
source: crates/trousseau-cli/tests/help.rs
expression: stdout
---
Get a key's value

Usage: trousseau get [OPTIONS] <KEY>

Arguments:
  <KEY>  The key to read

Options:
      --out <PATH>              Write the value to this file instead of stdout
      --store <PATH>            The store to operate on. Overrides every other resolution rule (3.2)
                                [env: TROUSSEAU_STORE=]
      --force                   Overwrite `--out` if it already exists
      --global                  Use the personal store instead of the nearest project store (3.2)
      --clip                    Copy the value to the clipboard instead of printing it
      --identity <PATH>         An identity file to try when unlocking a recipients store.
                                Repeatable (3.3.2)
      --passphrase-file <PATH>  A file holding the passphrase for a passphrase store (3.3.3)
      --json                    Emit machine-readable JSON instead of human-readable text (3.5.1)
      --quiet                   Suppress informational stderr lines. Errors still print (3.5.1)
      --no-input                Never prompt. Anything that would have prompted fails instead
                                (3.5.1)
  -h, --help                    Print help
