crates/trousseau-cli/tests/snapshots/help__help_import.snap
---
source: crates/trousseau-cli/tests/help.rs
expression: stdout
---
Import entries into the store

Usage: trousseau import [OPTIONS] [PATH]

Arguments:
  [PATH]
          Read from this file instead of stdin

Options:
      --format <FORMAT>
          The input format

          Possible values:
          - json:   The full JSON payload document
          - dotenv: One `NAME="value"` line per UTF-8 entry
          - toml:   The `edit` TOML document format
          
          [default: json]

      --strategy <STRATEGY>
          How to resolve a key that already exists

          Possible values:
          - keep:      Keep the existing entry
          - overwrite: Replace the existing entry with the imported one
          - fail:      Abort the whole import on any collision
          
          [default: fail]

  -h, --help
          Print help (see a summary with '-h')

Global options:
      --store <PATH>
          Use this store file. Wins over `--global` and over store discovery
          
          [env: TROUSSEAU_STORE=]

      --global
          Use your personal store instead of the nearest project store (the `.trousseau` file in
          this directory or a parent)

      --identity <PATH>
          An identity (private key) file to try when unlocking. Repeatable. Also tried:
          `TROUSSEAU_IDENTITY_FILE`, the config file's `identity.files`, the default identity file,
          `~/.ssh/id_ed25519` and `~/.ssh/id_rsa`

      --passphrase-file <PATH>
          Read the store's passphrase from this file instead of prompting. One trailing newline is
          stripped

      --json
          Print one JSON document on stdout instead of text. Errors become a JSON object on stderr

      --quiet
          Suppress informational messages on stderr. Errors still print

      --no-input
          Never prompt. A command that would prompt fails instead: exit 4 for a secret, exit 2 for a
          confirmation
